# workspace-fastapi

./: README.md
fastapi-todo-jinja2/: pyproject.toml  root.py
fastapi-todo-jinja2/database/: connection.py
fastapi-todo-jinja2/docker/local/: docker-compose.yml  dockerfile_mongodb  dockerfile_pg  dockerfile_python_310  start.sh
fastapi-todo-jinja2/models/: todo.py
fastapi-todo-jinja2/routes/: routelist.py  todo.py
fastapi-todo-jinja2/static/css/: style.css
fastapi-todo-jinja2/templates/: base.html  header.html  todo.html  todos.html
